tests/neg/6571.check
-- [E007] Type Mismatch Error: tests/neg/6571.scala:6:39 ---------------------------------------------------------------
6 |  def foo: M[Inv[Int] & Inv[String]] = "" // error
  |                                       ^^
  |                                       Found:    ("" : String)
  |                                       Required: Test.M[Test.Inv[Int] & Test.Inv[String]]
  |
  |                                       Note: a match type could not be fully reduced:
  |
  |                                         trying to reduce  Test.M[Test.Inv[Int] & Test.Inv[String]]
  |                                         failed since selector Test.Inv[Int] & Test.Inv[String]
  |                                         does not match  case Test.Inv[u] => u
  |                                         and cannot be shown to be disjoint from it either.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/6571.scala:7:39 ---------------------------------------------------------------
7 |  def bar: M[Inv[String] & Inv[Int]] = 0 // error
  |                                       ^
  |                                       Found:    (0 : Int)
  |                                       Required: Test.M[Test.Inv[String] & Test.Inv[Int]]
  |
  |                                       Note: a match type could not be fully reduced:
  |
  |                                         trying to reduce  Test.M[Test.Inv[String] & Test.Inv[Int]]
  |                                         failed since selector Test.Inv[String] & Test.Inv[Int]
  |                                         does not match  case Test.Inv[u] => u
  |                                         and cannot be shown to be disjoint from it either.
  |
  | longer explanation available when compiling with `-explain`
